fixed layout issues

--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -1,8 +1,11 @@
-footer {
+.footer {
   
     background-color: rgb(57, 70, 80);
     color: rgb(171, 190, 202);
-    text-align: center;
-    
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right:0;
+    width: 100%
     
   }
