--- a/src/pages/AboutPage/style.css
+++ b/src/pages/AboutPage/style.css
@@ -1,3 +1,10 @@
+.about-container { 
+  background-color: rgb(39, 42, 47) !important;
+  color: rgb(171, 190, 202);
+  width: 100%;
+  
+}
+
 .bio-container {
     font-size: 20px;
     width: 100px;
@@ -5,10 +12,7 @@
     left: 10%
     }
 
-    .about-container { 
-        background-color: rgb(39, 42, 47) !important;
-        color: rgb(171, 190, 202);
-    }
+    
 
     #headshot {
         position: relative;
